fix: address IDE inspection warnings